--- a/PulumiPlugin.yaml
+++ b/PulumiPlugin.yaml
@@ -1,3 +1,3 @@
 name: storage-component
-runtime: nodejs
+runtime: python
 description: A Pulumi component for Azure Storage Account with blob container and blob
